Se crearon los personajes enemigos de forma aleatoria y se muestran junto con el personaje seleccionado en el escenario de lucha, se añadieron las imagenes del enemigo

--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body id>
-    <section id ="seccion-inicio">
+    <section id ="section-inicio">
         <div id="container-boton-inicio">
             <button id="boton-inicio">INICIO</button>
         </div>
         <h1 id="creditos">Autor: StivenDeveloper</h1>
     </section>
 
-    <section id ="seleccionar-personaje">
+    <section id ="section-personaje">
         <figure id="contenedor-tarjetas" class="tarjetas">
 
         </figure>
         <button id="boton-personaje">Seleccionar personaje</button>
     </section>
 
-    <section id="seleccionar-ataque">
-
+    <section id="section-lucha">
+        <figure id="lucha-jugador"></figure>
+        <figure id="lucha-enemigo"></figure>
     </section>
 </body>
 <script src="js/game.js"></script>
