--- a/index.html
+++ b/index.html
@@ -21,14 +21,30 @@
 
     <section id ="section-personaje">
         <figure id="contenedor-tarjetas" class="tarjetas">
-
+            
         </figure>
         <button id="boton-personaje">Seleccionar personaje</button>
     </section>
 
     <section id="section-lucha">
+        <div id="mensaje-resultado" class="contenedor-mensaje">
+
+        </div>
         <figure id="lucha-jugador"></figure>
         <figure id="lucha-enemigo"></figure>
+<!------------------------------------------------------------------------------>
+        <div id="contenedor-ataque">
+            <figure id="contenedor-ataques"></figure>
+        
+            <input type="image" src="assets/mario_th.png" id="boton-ataque"></input>   
+        </div>
+<!------------------------------------------------------------------------------>
+        <div id="contenedor-defensa">
+            <figure id="contenedor-defensas"></figure>     
+            <input type="image"  src="assets/bowser_th.png" id="boton-defensa"></input>
+        </div>
+        <button id="siguente-round">Siguente Round</button>
+        <button id="reiniciar-juego">Reinicar juego</button>
     </section>
 </body>
 <script src="js/game.js"></script>
